# feeder_zhida_stock_v_1.0

./: .gitignore  CMakeLists.txt  ChangeLog.md  Dockerfile  README.md
conf/: feeder.yaml
lib/DAAPI_v1.15/Linux/: Readme.txt  libDAApi.mak
lib/DAAPI_v1.16/: ReleaseNote.txt
lib/DAAPI_v2.1.0.1/doc/: ~$╚φ╝■╗ß╘▒╨╨╟ΘAPI╔╠╞╖║╧╘╝╚í╡├╜╙┐┌╬─╡╡.docx  ╓▒┤∩╚φ╝■╗ß╘▒╨╨╟ΘAPI╔╠╞╖║╧╘╝╚í╡├╜╙┐┌╬─╡╡.docx  ╣·╝╩╞┌╗⌡╣╔╞▒API_┐¬╖ó╬─╡╡_v2.1.0.1.docx  ╣·╝╩╞┌╗⌡╣╔╞▒API_╩╣╙├╦╡├≈_v2.1.0.1.docx
lib/DAAPI_v2.1.0.1/include/: DADataType.h  DAMarketApi.h  DAMarketStruct.h
src/: config.cc  config.h  daapi_server.cc  daapi_server.h  instrument_mgr.h  main.cc  md_callback.cc  md_callback.h
